# claude-code-rs

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  permissions.rs  ui.rs
crates/cli/src/commands/: clear.rs  help.rs  mod.rs  model.rs  quit.rs  rec.rs  think.rs
crates/cli/src/tui/: event.rs  markdown.rs  mod.rs  render.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  auth.rs  config.rs  event.rs  lib.rs  permission.rs  session.rs
crates/core/src/tools/: bash.rs  edit.rs  fetch.rs  file_read.rs  file_write.rs  git.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  search.rs  write.rs
crates/git/: Cargo.toml
crates/git/src/: blame.rs  diff.rs  lib.rs  log.rs  repo.rs  show.rs  status.rs  write.rs
crates/search/: Cargo.toml
crates/search/src/: bm25.rs  hybrid.rs  lib.rs  semantic.rs  snippet.rs  walk.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
