[package]
name = "claude-code-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccrs"
path = "src/main.rs"

[dependencies]
claude-code-core = { path = "../core", features = ["search"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
crossterm = "0.28"
webbrowser = "1"
