[package]
name = "claude-code-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccrs"
path = "src/main.rs"

[features]
default = ["git", "search", "voice"]
git = ["claude-code-core/git"]
search = ["claude-code-core/search"]
voice = ["dep:cpal", "dep:hound"]

[dependencies]
claude-code-core = { path = "../core" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
ratatui = { version = "0.30", features = ["crossterm"] }
dialoguer = "0.12"
crossterm = "0.29"
webbrowser = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
cpal = { version = "0.17", optional = true }
hound = { version = "3.5", optional = true }
