[package]
name = "claude-code-core"
version = "0.1.0"
edition = "2024"

[features]
search = ["dep:ccrs-search"]
git = ["dep:ccrs-git"]

[dependencies]
ccrs-utils = { path = "../utils" }
ccrs-search = { path = "../search", optional = true }
ccrs-git = { path = "../git", optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
anyhow = "1"
hex = "0.4"
glob = "0.3"
ignore = "0.4"
regex = "1"
thiserror = "2"
url = "2"
dirs = "6"
futures = "0.3"
futures-core = "0.3"

[dev-dependencies]
tempfile = "3"
